Fixed z-index to allow interaction

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ small {
 
 .row {
   position: relative;
-  z-index: -10;
+  z-index: 1;
   font-family: 'Roboto', sans-serif;
   margin-left: 0;
 }
@@ -59,4 +59,14 @@ small {
 
 button {
   font-family: 'Roboto', sans-serif;
+}
+
+small {
+  position: relative;
+  z-index: 1;
+}
+
+.row > {
+  position: relative;
+  z-index: 1;
 }
